2003-10-29  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-show-buddies): call (font-lock-mode 1).  not sure if
	this is the right place for this.
	(tnt-html-regexps-to-replace): removed scott's added "</?[bui]>"
	regexp; removed his spurious "tnt-html-regexps-to-replace" line;
	added replacements for I and B tags to _ and *, respectively.
	(tnt-html-tags-to-strip): added "</?[Uu]>".

2003-10-28  Scott Evans  <scott@templarcorp.com>

	* tnt.el (tnt-buddy-list-message-waiting-face): Add.
	(tnt-buddy-list-font-lock-keywords): Add MESSAGE WAITING keyword.
	(tnt-html-regexps-to-replace): Add regexps for bold/italic/underline.

2003-10-25  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-cycle-buddies-sort): Add.
	(tnt-buddy-list-mode-map): Add "S" = tnt-cycle-buddies-sort.
	Add "ga", "gi", "go" for grouping.
	(tnt-buddy-list-menu): Add 4th menu with sort order, grouping commands.
	(tnt-next-menu): There are 4 menus now.

2003-10-25  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-kill): Store the tnt-current-user, *then* check it
	for null after attempting to sign off.

2003-10-25  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-fullname-for-nick): Move out of tnt-buddy-list-filter.
	(tnt-is-buddy-away): Rename from tnt-buddy-away, update documentation.
	(tnt-get-away-msg): Allow prefix to be anything.
	(tnt-toggle-away): Use interactive "P" instead of "p".
	(tnt-sort-buddies-by): add new customization option.
	(tnt-group-away-buddies): add new customization option.
	(tnt-group-idle-buddies): add new customization option.
	(tnt-group-offline-buddies): add new customization option.
	(tnt-very-idle-minimum): add new customization option.
	(tnt-blist-to-buffer): Deleted.
	(tnt-buddy-list-filter): Deleted.
	(tnt-insert-blist): Replaces tnt-blist-to-buffer.  Lots of new
	hoopy functionality.
	(tnt-annotated-blist): Add.
	(tnt-nick-properties): Add.
	(tnt-reorder-annotated-blist): Add.
	(tnt-nick-less-than): Add.